--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,13 @@ tools/rescomp/rescomp.jar
 tools/xgm rom builder
 /.idea
 *.iml
-/lib/libmd*a
-/res/libres.h
-/src/ext/minimus_drv.s
+lib/libmd.a
+res/libres.h
+src/ext/minimusic/minimus_drv.s
+lib/libmd_debug.a
+src/snd/drv_null.s
+src/snd/drv_xgm.s
+src/snd/pcm/drv_dpcm2.s
+src/snd/pcm/drv_pcm.s
+src/snd/pcm/drv_pcm4.s
+src/snd/xgm2/drv_xgm2.s
